# master/api/account/account.go
@@ -12,24 +12,28 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type AccountResponse struct {
+type accountResponse struct {
 	Succeed bool               `json:"succeed"`
 	Data    *models.AccountDTO `json:"data"`
 }
+type userAccountResponse struct {
+	Succeed bool            `json:"succeed"`
+	Data    *models.UserDTO `json:"data"`
+}
 
-// GetAccount godoc
+// GetAccountByID godoc
 // @Summary Get account by ID
 // @Description Get Account by ID
 // @Tags account
 // @Accept json
 // @Produce json
 // @Param id path int true "Account ID"
-// @Success 200 {object} AccountResponse "Successful response with account data"
+// @Success 200 {object} accountResponse "Successful response with account data"
 // @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
 // @Failure 404 {object} api.ErrorResponse "Not Found with error message"
 // @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /account/{id} [get]
-func GetAccountById(c *gin.Context) {
+func GetAccountByID(c *gin.Context) {
 
 	accountService, err := accountservice.GetService()
 	if err != nil {
@@ -59,9 +63,65 @@ func GetAccountById(c *gin.Context) {
 		})
 		return
 	}
-	c.JSON(http.StatusOK, AccountResponse{
+	c.JSON(http.StatusOK, accountResponse{
 		Succeed: true,
 		Data:    account.ToDTO(),
 	})
 
+}
+
+// GetAccountByUserID godoc
+// @Summary Get account by User ID
+// @Description Get Account by User ID
+// @Tags account
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} userAccountResponse "Successful response with account data"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 404 {object} api.ErrorResponse "Not Found with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
+// @Router /account/user/{id} [get]
+func GetAccountByUserID(c *gin.Context) {
+	accountService, err := accountservice.GetService()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Account service not initialized",
+		})
+	}
+	idStr := c.Param("userid")
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Wrong User ID",
+		})
+		return
+	}
+
+	account, err := accountService.GetByUserId(uint(id), []string{})
+	if err != nil {
+		c.JSON(http.StatusNotFound, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Account not found",
+		})
+		return
+	}
+	accountDTOs := make([]models.AccountDTO, len(*account))
+	for i, acc := range *account {
+		accountDTOs[i] = *acc.ToDTO()
+	}
+	user := &models.UserDTO{
+		ID:       uint(id),
+		Accounts: accountDTOs,
+	}
+
+	c.JSON(http.StatusOK, userAccountResponse{
+		Succeed: true,
+		Data:    user,
+	})
 }
