# master/api/response.go
@@ -1,5 +1,7 @@
 package api
 
+// ErrorResponse godoc
+// All the error response
 type ErrorResponse struct {
 	Succeed bool   `json:"succeed"`
 	Error   string `json:"error"`
